fixed icons not showing in firefox

--- a/src/stylesheets/index.styl
+++ b/src/stylesheets/index.styl
@@ -264,29 +264,17 @@ ul li
 	padding-left: 2rem
 	padding-right: 2rem
 
-.icons
-	margin-top: 2em
-	display: relative
-	margin-left: 1rem
-	margin-bottom: 2em
+
+.icons 
+	margin: 30px
+
+#gitIcon
+	height: 8rem
+
+#linkedInIcon
+	height: 6rem
+	padding-bottom: 2rem
 	
-
-.icon1
-	display: inline-block
-	content: url("/githubIcon.svg"); 
-	width: 160px 
-	height: 160px
-	max-width: 200px
-	margin-right:-30px
-	margin-bottom:-42px
-	transition: all ease-in 0.1s
-
-.icon2
-	display: inline-block
-	content: url("/linkedin_circle_black.svg") 
-	width: 160px 
-	height: 120px
-	transition: all ease-in 0.1s
 
 @media screen and (max-width: 600px)
 	//intro
